css_advanced/styles.css
* {
  font-family: 'Source Sans Pro';
}

header {
  display: flex;
  justify-content: space-between;
  position: absolute;
  background-color: transparent;
  width: 1103px;
  height: 29px;
  z-index: 1;
  top: 101px;
}

header .logo {
  display: flex;
}

header .menu {
  display: flex;
  gap: 52px;
  align-items: space-between;
}

header .menu a {
  text-decoration: none;
  font-family: "Source Sans Pro";
  font-weight: 700;
  color: #ffffff;
  letter-spacing: 0;
  line-height: normal;
}

button {
  border-radius: 22px;
  background: #C271FF;
  width: 162px;
  height: 44px;
  color: #FFF;

  text-align: center;
  font-family: "Source Sans Pro";
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
}
.text-wrapper {
  top: 0;
  left: 0;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 700;
  color: #ffffff;
  letter-spacing: 0;
  line-height: normal;
}

.menu .text-wrapper {
  font-size: 12px;
}

.people {
  display: flex;
  align-items: space-around;
  gap: 139px;
}

#banner {
  display: flex;
  position: relative;
  justify-content: space-around;
  background: url('images/background.png');
  background-repeat: no-repeat;
  z-index: 0;
  width: 1440px;
  /* height: 150%; */
  height: 1093px;
  flex-direction: column;
}

#banner h1 {
  font-size: 120px;
  display: flex;
  justify-content: center;
}

#banner .text-row {
  display: flex;
  gap: 59px;
  justify-content: center;
}

#banner .button {
  display: flex;
  justify-content: center;
}

#banner h2 {
  display: flex;
  justify-content: center;
}

#quote {
  background: url('images/background2.png');
  height: 392px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#quote .circle {
  border-radius: 50%;
}

#quote p {
  margin-left: 40px;
}

.membership {
  background: url('images/membershipBackground.png');
  height: 502px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.membership .membership-block {
  display: flex;
  justify-content: center;
  gap: 28px;
}

.membership h1 {
  font-size: 32px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
}

.membership .membership-item {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 256px;
}

.membership p {
  text-align: center;
  width: 221px;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 26px;
}

.membership button {
  color: #FFF;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
}

.faq {
width: 920px;
height: 707px;
}
.faq h1 {
  color: #071629;

  text-align: center;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 60px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}
.center-horizontally {
  display: flex;
  justify-content: center;
}

.circle {
  border-radius: 50%;
}

.person {
  width: 150px;
}

.award {
  color: #FFF;

  text-align: center;
  font-size: 16px;
  font-style: italic;
  font-weight: 400;
  line-height: 24px
}

.name {
  color: #FFF;

  text-align: center;
  font-size: 18px;
  font-style: normal;
  font-weight: 900;
  line-height: 27px;
}

.highlight {
  color: #C271FF;
  font-weight: 700;
}

.italic {
  font-style: italic;
}

.light {
  font-weight: 400;
}

.quote-box {
  width: 730px;
  height: 158px;
}

.videos {
  width: 1228px;
  height: 450px;
  display: flex;
  align-items: center;
  justify-content: center;

}
.video-box {
  width: 942px;
  height: 624 px;
  display: flex;
  text-align: center;
  align-items: column;
  /* justify-content: center; */
}

.video-item {
  width: 255px;
  height: 335px;

}

.video-block {
  display: flex;
  gap: 27px;
}

.small {
  width: 30px;
  height: 30px;
}

.author {
  display: flex;
  align-items: center;
  gap: 13px;
}

.rating {
  display: flex;
  align-items: center;
  gap: 79px;
}

.video-box .text-box {
  height: 40px;
  width: 294px;
}

footer {
  background: url('images/footerBackground.png');
  display: flex;
  justify-content: space-between;
}

